<resources>
    <string name="app_name">CleanCar</string>
    <string name="strOlvidar"><u>Olvide mi Contraseña</u></string>

    <string name="title_activity_menu_principal">MenuPrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CleanCar</string><!--modifico el nombre-->
    <string name="nav_header_subtitle">ticsitotres@gmail.com</string><!--info. del correo-->
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_reserva">Servicio</string>
    <string name="menu_servicio">Reserva</string><!--queda pendiente por modificar-->
    <string name="menu_notificacion">Notificación</string>
    <string name="menu_configuracion">Configuración</string>
    <string name="menu_salir">Salir</string>

</resources>